--- a/config.yml
+++ b/config.yml
@@ -5,7 +5,7 @@ max_step: 80000
 batchsize: 32
 
 total_pace: 10
-pace_percnet: [0.5, 0.0556, 0.0556, 0.0556, 0.0556, 0.0556, 0.0556, 0.0556, 0.0556, 0.0552]
+pace_percent: [0.5, 0.0556, 0.0556, 0.0556, 0.0556, 0.0556, 0.0556, 0.0556, 0.0556, 0.0552]
 alpha: 2
 threshold: -3.0
 ent_pick_per: 0
